--- a/source/_posts/前端异步解决方案.md
+++ b/source/_posts/前端异步解决方案.md
@@ -145,46 +145,93 @@ console.log(333)
 依然不适合单线程的思维模式。所以下一个解决方案 又出现了
 
 ## async/await
-- 这是ES7的语法，当然，在现在这种工程化的时代，基本babel编译之后也都是能在项目中引用的
+- 这是ES7的语法，async 会将其后的函数（函数表达式或 Lambda）的返回值封装成一个 Promise 对象，而 await 会等待这个 Promise 完成，并将其 resolve 的结果返回出来。
 
-- 基本用法跟规则
-1. async 表示这是一个async函数，
-2. await只能用在这个函数里面。后面应该跟着是 Promise 对象， 不跟的话也没关系， 但是await就不会在这里等待了
-3. await 表示在这里等待promise返回结果
 
+### 基本用法跟规则
+- async
+
+1.async 函数返回的是一个 Promise 对象。async 函数（包含函数语句、函数表达式、Lambda表达式）会返回一个 Promise 对象，如果在函数中 return 一个直接量，async 会把这个直接量通过 Promise.resolve() 封装成 Promise 对象。
+
+2.async 函数返回的是一个 Promise 对象，所以在最外层不能用 await 获取其返回值的情况下，我们当然应该用原来的方式：then() 链来处理这个 Promise 对象，就像这样
 ```bash
-const fn = () => {
-    return new Promise( (resolve, reject) => {
-        setTimeout(function(){
-            resolve(222)
-        }, 1000)
-    })
-}
-(async function(){
-    console.log(111)
-    let data = await fn()
-    console.log(data)
-    console.log(333)
-})()
-// 是不是返回 111 => 222 => 333 了呢
+    testAsync().then(v => {
+        console.log(v);    // 输出 hello async
+    });
+```
+3.Promise 的特点——无等待，所以在没有 await 的情况下执行 async 函数，它会立即执行，返回一个 Promise 对象，并且，绝不会阻塞后面的语句。这和普通返回 Promise 对象的函数并无二致。
 
-// 我们来试下返回别的东西， 不返回 promise
-const fn = () => {
-    return new Promise( (resolve, reject) => {
-        setTimeout(function(){
-            resolve(222)
-        }, 1000)
-    })
-}
-(async function(){
-    console.log(111)
-    let data = await fn()
-    console.log(data)
-    console.log(333)
-})()
-// 打印结果： 111 => null => 333 => 222
-// 当我们不是在await 关键字后面返回的不是 promise 对象时， 它就不会在原地等待 promise执行完再执行， 而是向正常的JS一样执行，把异步任务跳过去
+- await
 
+1. await 是在等待一个 async 函数完成。不过按语法说明，await 等待的是一个表达式，这个表达式的计算结果是 Promise 对象或者其它值（换句话说，就是没有特殊限定）。
+2.await 不仅仅用于等 Promise 对象，它可以等任意表达式的结果，所以，await 后面实际是可以接普通函数调用或者直接量的。
+
+### async/await 的优势在于处理 then 链
+
+- 单一的 Promise 链并不能发现 async/await 的优势，但是，如果需要处理由多个 Promise 组成的 then 链的时候，优势就能体现出来了（很有意思，Promise 通过 then 链来解决多层回调的问题，现在又用 async/await 来进一步优化它）。
+- 假设一个业务，分多个步骤完成，每个步骤都是异步的，而且依赖于上一个步骤的结果。
+```bash
+    /**
+    * 传入参数 n，表示这个函数执行的时间（毫秒）
+    * 执行的结果是 n + 200，这个值将用于下一步骤
+    */
+    function takeLongTime(n) {
+        return new Promise(resolve => {
+            setTimeout(() => resolve(n + 200), n);
+        });
+    }
+
+    function step1(n) {
+        console.log(`step1 with ${n}`);
+        return takeLongTime(n);
+    }
+
+    function step2(n) {
+        console.log(`step2 with ${n}`);
+        return takeLongTime(n);
+    }
+
+    function step3(n) {
+        console.log(`step3 with ${n}`);
+        return takeLongTime(n);
+    }
+```
+现在用 Promise 方式来实现这三个步骤的处理
+```bash
+    function doIt() {
+        console.time("doIt");
+        const time1 = 300;
+        step1(time1)
+            .then(time2 => step2(time2))
+            .then(time3 => step3(time3))
+            .then(result => {
+                console.log(`result is ${result}`);
+                console.timeEnd("doIt");
+            });
+    }
+
+    doIt();
+
+    // c:\var\test>node --harmony_async_await .
+    // step1 with 300
+    // step2 with 500
+    // step3 with 700
+    // result is 900
+    // doIt: 1507.251ms
+```
+如果用 async/await 来实现呢，会是这样
+```bash
+    async function doIt() {
+        console.time("doIt");
+        const time1 = 300;
+        const time2 = await step1(time1);
+        const time3 = await step2(time2);
+        const result = await step3(time3);
+        console.log(`result is ${result}`);
+        console.timeEnd("doIt");
+    }
+
+    doIt();
 ```
 
 ### await 关键字必须包裹在 async 函数里面，而且async 函数必须是它的父函数
