--- a/source/_posts/几种常用的认证机制.md
+++ b/source/_posts/几种常用的认证机制.md
@@ -7,7 +7,7 @@ updated: 2018-03-15 17:53:45
 ---
 
 ------
-
+<!-- more -->
 
 ## HTTP Basic Auth
 HTTP Basic Auth简单点说明就是每次请求API时都提供用户的username和password，简言之，Basic Auth是配合RESTful API 使用的最简单的认证方式，只需提供用户名密码即可，但由于有把用户名密码暴露给第三方客户端的风险，在生产环境下被使用的越来越少。因此，在开发对外开放的RESTful API时，尽量避免采用HTTP Basic Auth
