--- a/source/_posts/设计模式——单例模式.md
+++ b/source/_posts/设计模式——单例模式.md
@@ -1,7 +1,7 @@
 layout: post
-title: 设计模式——单例模式
+title: js设计模式
 comment: true
-tags: [设计模式,后端]
+tags: [设计模式,前端]
 date: 2018-02-06 17:43:24
 updated: 2018-02-06 17:43:24
 ---
@@ -9,6 +9,34 @@ updated: 2018-02-06 17:43:24
 ------
 <!-- more -->
 
+### 工厂模式
+简单的工厂模式可以理解为解决多个相似的问题;
+```bash
+function CreatePerson(name,age,sex) {
+    var obj = new Object();
+    obj.name = name;
+    obj.age = age;
+    obj.sex = sex;
+    obj.sayName = function(){
+        return this.name;
+    }
+    return obj;
+}
+var p1 = new CreatePerson("longen",'28','男');
+var p2 = new CreatePerson("tugenhua",'27','女');
+console.log(p1.name); // longen
+console.log(p1.age);  // 28
+console.log(p1.sex);  // 男
+console.log(p1.sayName()); // longen
+
+console.log(p2.name);  // tugenhua
+console.log(p2.age);   // 27
+console.log(p2.sex);   // 女
+console.log(p2.sayName()); // tugenhua  
+```
+
+### 单例模式
+只能被实例化(构造函数给实例添加属性与方法)一次
 - 单例模式是常用的设计模式之一，作为对象的创建模式，单例模式确保某一个类只有一个实例，而且自行实例化并向整个系统提供这个实例，特点：
 1. 某个类只能有一个实例，避免重复实例化。
 2. 必须自行创建这个实例，不允许外部实例化，不允许克隆。
@@ -16,51 +44,71 @@ updated: 2018-02-06 17:43:24
 ### 举个例子：
 
 ```bash
-<?php
-/**
-* 设计模式之单例模式
-* $_instance必须声明为静态的私有变量
-* 构造函数和析构函数必须声明为私有,防止外部程序实例化类。从而失去单例模式的意义
-* getInstance()方法必须设置为公有的,必须调用此方法，以返回实例的一个引用
-* ::操作符只能访问静态变量和静态函数
-* new对象都会消耗内存，使用场景:最常用的地方是数据库连接。使用单例模式生成一个对象后，该对象可以被其它众多对象所使用。 
-*/
-class Singleton
-{
-    private static $_instance;
-
-    //阻止用户实例化 实例化抛出Fatal error
-    private function __construct(){}
-
-    //阻止用户复制对象实例 抛出Fatal error
-    public function __clone()
-    {
-        throw new Exception("not allow clone this class.");
-    }
-
-    //单例方法
-    public static function getInstance()
-    {
-        if(!(self::$_instance instanceof self))
-        {
-            self::$_instance = new self();
-        }
-
-        return self::$_instance;
-    }
-
-    public function doSomething()
-    {
-        echo("to do something");
-    }
+// 单体模式
+var Singleton = function(name){
+    this.name = name;
+};
+Singleton.prototype.getName = function(){
+    return this.name;
 }
-
-//$singleton = new Singleton(); //Fatal error
-
-$singleton = Singleton::getInstance();
-
-$singleton->doSomething();
-
-//$t = clone $singleton;//Fatal error
-
+// 获取实例对象
+var getInstance = (function() {
+    var instance = null;
+    return function(name) {
+        if(!instance) {//相当于一个一次性阀门,只能实例化一次
+            instance = new Singleton(name);
+        }
+        return instance;
+    }
+})();
+// 测试单体模式的实例,所以a===b
+var a = getInstance("aa");
+var b = getInstance("bb");  
 ```
+
+### 沙箱模式
+将一些函数放到自执行函数里面,但要用闭包暴露接口,用变量接收暴露的接口,再调用里面的值,否则无法使用里面的值
+```bash
+let sandboxModel=(function(){
+    function sayName(){};
+    function sayAge(){};
+    return{
+        sayName:sayName,
+        sayAge:sayAge
+    }
+})()
+```
+### 发布者订阅模式
+```bash
+//发布者与订阅模式
+    var shoeObj = {}; // 定义发布者
+    shoeObj.list = []; // 缓存列表 存放订阅者回调函数
+
+    // 增加订阅者
+    shoeObj.listen = function(fn) {
+        shoeObj.list.push(fn); // 订阅消息添加到缓存列表
+    }
+
+    // 发布消息
+    shoeObj.trigger = function() {
+            for (var i = 0, fn; fn = this.list[i++];) {
+                fn.apply(this, arguments);//第一个参数只是改变fn的this,
+            }
+        }
+     // 小红订阅如下消息
+    shoeObj.listen(function(color, size) {
+        console.log("颜色是：" + color);
+        console.log("尺码是：" + size);
+    });
+
+    // 小花订阅如下消息
+    shoeObj.listen(function(color, size) {
+        console.log("再次打印颜色是：" + color);
+        console.log("再次打印尺码是：" + size);
+    });
+    shoeObj.trigger("红色", 40);
+    shoeObj.trigger("黑色", 42);  
+```
+- 代码实现逻辑是用数组存贮订阅者, 发布者回调函数里面通知的方式是遍历订阅者数组,并将发布者内容传入订阅者数组
+
+更多设计模式：https://www.cnblogs.com/tugenhua0707/p/5198407.html
