--- a/source/_posts/原型链.md
+++ b/source/_posts/原型链.md
@@ -13,7 +13,7 @@ updated: 2018-04-16 20:56:47
 对象继承属性的一个链条
 
 ### 构造函数,实例与原型对象的关系
-![links](http://cdn.wangyuanqi.xyz/linksize.png)
+![links](http://cdn.wangyuanqi.com/linksize.png)
 
 
 
