--- a/source/_posts/观察者模式和订阅-发布者模式.md
+++ b/source/_posts/观察者模式和订阅-发布者模式.md
@@ -18,7 +18,7 @@ updated: 2019-01-30 16:42:29
 
 比如有个“天气中心”的具体目标A，专门监听天气变化，而有个显示天气的界面的观察者B，B就把自己注册到A里，当A触发天气变化，就调度B的更新方法，并带上自己的上下文。
 
-![Login progress](http://cdn.wangyuanqi.xyz/looks.png)
+![Login progress](http://cdn.wangyuanqi.com/looks.png)
 
 #### 发布/订阅模式
 
@@ -26,7 +26,7 @@ updated: 2019-01-30 16:42:29
 
 比如有个界面是实时显示天气，它就订阅天气事件（注册到调度中心，包括处理程序），当天气变化时（定时获取数据），就作为发布者发布天气信息到调度中心，调度中心就调度订阅者的天气处理程序。
 
-![Login progress](http://cdn.wangyuanqi.xyz/orders.png)
+![Login progress](http://cdn.wangyuanqi.com/orders.png)
 
 #### 总结
 
