--- a/source/_posts/几种常用的认证机制.md
+++ b/source/_posts/几种常用的认证机制.md
@@ -17,14 +17,14 @@ OAuth（开放授权）是一个开放的授权标准，允许用户让第三方
 
 OAuth允许用户提供一个令牌，而不是用户名和密码来访问他们存放在特定服务提供者的数据。每一个令牌授权一个特定的第三方系统（例如，视频编辑网站)在特定的时段（例如，接下来的2小时内）内访问特定的资源（例如仅仅是某一相册中的视频）。这样，OAuth让用户可以授权第三方网站访问他们存储在另外服务提供者的某些特定信息，而非所有内容
 下面是OAuth2.0的流程：
-![OAuth2.0](http://cdn.wangyuanqi.xyz/author.png)
+![OAuth2.0](http://cdn.wangyuanqi.com/author.png)
 这种基于OAuth的认证机制适用于个人消费者类的互联网产品，如社交类APP等应用，但是不太适合拥有自有认证权限管理的企业应用；
 
 ## Cookie Auth
 Cookie认证机制就是为一次请求认证在服务端创建一个Session对象，同时在客户端的浏览器端创建了一个Cookie对象；通过客户端带上来Cookie对象来与服务器端的session对象匹配来实现状态管理的。默认的，当我们关闭浏览器的时候，cookie会被删除。但可以通过修改cookie 的expire time使cookie在一定时间内有效；
 
 ## Token Auth
-![Token Auth](http://cdn.wangyuanqi.xyz/author2.png)
+![Token Auth](http://cdn.wangyuanqi.com/author2.png)
 
 Token Auth的优点
 Token机制相对于Cookie机制又有什么好处呢？
@@ -109,11 +109,11 @@ https://your.awesome-app.com/make-friend/?jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1Ni
 - 返回用户信息后，Login Action从配置文件中获取Token签名生成的秘钥信息，进行Token的生成；
 - 生成Token的过程中可以调用第三方的JWT Lib生成签名后的JWT数据；
 - 完成JWT数据签名后，将其设置到COOKIE对象中，并重定向到首页，完成登录过程；
-![Login progress](http://cdn.wangyuanqi.xyz/loginimgs.jpg)
+![Login progress](http://cdn.wangyuanqi.com/loginimgs.jpg)
 请求认证
 基于Token的认证机制会在每一次请求中都带上完成签名的Token信息，这个Token信息可能在COOKIE
 中，也可能在HTTP的Authorization头中；
-![Login progress](http://cdn.wangyuanqi.xyz/loginprogress.jpg)
+![Login progress](http://cdn.wangyuanqi.com/loginprogress.jpg)
 - 客户端（APP客户端或浏览器）通过GET或POST请求访问资源（页面或调用API）；
 - 认证服务作为一个Middleware HOOK 对请求进行拦截，首先在cookie中查找Token信息，如果没有找到，则在HTTP Authorization Head中查找；
 - 如果找到Token信息，则根据配置文件中的签名加密秘钥，调用JWT Lib对Token信息进行解密和解码；
